# TimeWoven

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  DB_CHANGELOG.md  Makefile  PRODUCT_BACKLOG.md  PROJECT_LOG.md  README.md  TECH_PASSPORT.md  TEST_WEBHOOK.txt  TIMEWOVEN_WORKFLOW_ROLES.md  TimeWoven_Anchor_2026-04-23.md  TimeWoven_Anchor_2026-04-25.md  create_postgres_schema.sql  db_schema_before.sql  db_tables_before.txt  deploy.sh  deploy_landing.sh  git_push_docs.sh  hostkey_n8n  hostkey_n8n.pub  processor.py  pyproject.toml  requirements.txt  test_bot.py  timewoven-landing-clean.html
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 557fa6e449c1_t_db_demo_2026_04_30_01_create_demo_.py
app/: db.py  main.py  main.py.bak_all_templates_2026-04-15  main_backup.py  models.py  security.py
app/api/: timeline.py
app/bot/: max_messenger.py
archive/: main.py.bak_site_preview_2026-04-15
docs/: CNAME  PROJECT_LOG.md  PROJECT_OPS_PROTOCOL.md  README.md  index.html
migrations/: 001_create_union_tables.sql  002_add_is_archived_to_memories.sql  003_expand_preferred_channel_for_max.sql  004_add_record_status_to_people.sql  005_max_contacts_events_and_cleanup.sql  006_add_max_chat_sessions.sql  007_add_essence_text_to_memories.sql  007_add_person_aliases.sql
scripts/: backup_manager.sh  migrate_add_is_archived.py  processor.py  test_ai_local_stub.py  test_models.py  test_pipeline.py  watcher.py
tech-docs/: DATABASE_SCHEMA.md  README.md  family-graph-snapshot-timeline-notes.md
temp/: README.md
tests/: test_admin_login_hardening.py  test_smoke.py
(+174 files in other folders)
