[tool.poetry]
name = "timewoven"
version = "0.1.0"
description = "TimeWoven — family history platform (Control Plane phase)."
authors = ["Dmitriy Bondarev <devnull@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
annotated-doc = "0.0.4"
annotated-types = "0.7.0"
anthropic = "0.96.0"
anyio = "4.12.1"
certifi = "2026.4.22"
cffi = "2.0.0"
click = "8.1.8"
cryptography = "47.0.0"
distro = "1.9.0"
docstring-parser = "0.18.0"
exceptiongroup = "1.3.1"
fastapi = "0.128.8"
greenlet = "3.5.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.11"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
jiter = "0.14.0"
markupsafe = "3.0.3"
pillow = "12.2.0"
psycopg2-binary = "2.9.11"
pycparser = "3.0"
pydantic = "2.12.5"
pydantic-core = "2.41.5"
pyotp = "2.9.0"
python-dotenv = "1.2.2"
python-multipart = "0.0.20"
pyyaml = "6.0.3"
qrcode = "8.2"
sniffio = "1.3.1"
sqlalchemy = "2.0.49"
starlette = "0.52.1"
starlette-session = "0.4.3"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
uvicorn = "0.39.0"
alembic = "1.18.4"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
pytest = "9.0.3"
ruff = "0.15.12"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# Keep this conservative; expand ruleset when codebase is clean.
select = ["F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
